[gd_scene load_steps=13 format=3 uid="uid://dwasuhvibmu61"]

[ext_resource type="PackedScene" uid="uid://cbsmy8l7srlc1" path="res://scenes/game_object/enemy/enemy_Base.tscn" id="1_wxspj"]
[ext_resource type="Script" uid="uid://p3rx5mm5eehr" path="res://scenes/game_object/enemy/enemy_Cube/enemy_Cube_Base.gd" id="2_28axu"]
[ext_resource type="Shader" uid="uid://w060hrtgv5k0" path="res://shader/dissolve.gdshader" id="3_28axu"]
[ext_resource type="Texture2D" uid="uid://m18p7kd5di2o" path="res://scenes/game_object/enemy/enemy_Cube/sprites/enemy_Cube_Base-Body.png" id="3_i1s7g"]
[ext_resource type="Texture2D" uid="uid://c7s8muw44w5k1" path="res://scenes/game_object/enemy/enemy_Cube/sprites/enemy_Cube_Base-Face_Decor.png" id="4_vvwbs"]
[ext_resource type="Texture2D" uid="uid://cm3wg5xg3iltp" path="res://scenes/game_object/enemy/enemy_Cube/sprites/enemy_Cube_Base-Face_Decor-Sad.png" id="5_i1s7g"]
[ext_resource type="PackedScene" uid="uid://cqsedpf1ft2xq" path="res://scenes/enemy_skill/enemy_skill_HeadSlam/enemy_skill_HeadSlam.tscn" id="6_vvwbs"]
[ext_resource type="PackedScene" uid="uid://diyefkios6nos" path="res://scenes/common/anim_spritesheet/anim_spritesheet.tscn" id="8_angwg"]
[ext_resource type="AnimationLibrary" uid="uid://b5ihfl6qnyp5" path="res://scenes/game_object/enemy/enemy_Cube/animation/enemy_cube_base_lib.res" id="9_0gthn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_28axu"]
shader = ExtResource("3_28axu")
shader_parameter/progress = 0.0
shader_parameter/float_dist = 6.0
shader_parameter/progress_rand_range = 0.2
shader_parameter/texture_size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvuhp"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fscs4"]
size = Vector2(16, 16)

[node name="enemy_Cube_Base" node_paths=PackedStringArray("body_sprite", "face_decor_sprite") instance=ExtResource("1_wxspj")]
script = ExtResource("2_28axu")
body_sprite = NodePath("visuals/body")
face_decor_sprite = NodePath("visuals/body/face_decor")
dissolve_shader = SubResource("ShaderMaterial_28axu")
normal_decor_texture = ExtResource("4_vvwbs")
die_decor_texture = ExtResource("5_i1s7g")

[node name="health" parent="." index="1"]
max_health = 1.0

[node name="look" parent="." index="3" node_paths=PackedStringArray("owner_node")]
owner_node = NodePath("../visuals")

[node name="attack_manager" parent="." index="5"]
ATTACK_RANGE = 25.0

[node name="enemy_skill_HeadSlam" parent="attack_manager" index="3" node_paths=PackedStringArray("hitbox_collision_shape", "follow_node") instance=ExtResource("6_vvwbs")]
hitbox_collision_shape = NodePath("../../hitbox/collision_shape_2d")
follow_node = NodePath("../../visuals/body")
delay_duration = 0.5
recover_duration = 1.0

[node name="hitbox" parent="." index="6"]
damage_amount = 1.0

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_rvuhp")
debug_color = Color(0.5137255, 0.5764706, 0, 0.6901961)

[node name="collision_shape_2d" type="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_rvuhp")
debug_color = Color(0.98039216, 0.27058825, 0.23529412, 0.78431374)

[node name="body" type="Sprite2D" parent="visuals" index="0"]
position = Vector2(0, -8)
texture = ExtResource("3_i1s7g")

[node name="face_decor" type="Sprite2D" parent="visuals/body" index="0"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("4_vvwbs")

[node name="collision_shape_2d" type="CollisionShape2D" parent="." index="9"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_fscs4")

[node name="anim_spritesheet" parent="." index="10" instance=ExtResource("8_angwg")]

[node name="animation_player" type="AnimationPlayer" parent="anim_spritesheet" index="0"]
root_node = NodePath("../..")
libraries = {
&"enemy_cube_base_lib": ExtResource("9_0gthn")
}
